2022-10-01T16:35:26Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3165323500
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 335 526 / 356 557
* notice: next accum: outdated-unq outdated-all / unq all: 336 527 / 357 558
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-17] / [2022-10-01]

2022-10-01T02:49:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3162901943
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 334 523 / 356 554
* notice: next accum: outdated-unq outdated-all / unq all: 335 526 / 356 557
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-09-16] / [2022-09-30]

2022-09-30T16:40:52Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3160297403
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 334 523 / 356 555
* notice: next accum: outdated-unq outdated-all / unq all: 334 523 / 356 554
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-16]

2022-09-30T08:39:08Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3157418145
* notice: last 14d: unq all: 2 32
* notice: prev accum: outdated-unq outdated-all / unq all: 334 523 / 354 554
* notice: next accum: outdated-unq outdated-all / unq all: 334 523 / 356 555
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-16 2022-09-30]

2022-09-29T16:39:48Z: