@@ -1,3 +1,11 @@
+2022-10-02T08:31:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167903810
+* notice: last 14d: unq all: 2 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 336 527 / 357 558
+* notice: next accum: outdated-unq outdated-all / unq all: 336 527 / 358 558
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-18 2022-10-02]
+
 2022-10-01T16:35:26Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3165323500
 * notice: last 14d: unq all: 2 31
